<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tumblr.dateapp.iloveyou.fragments.RegisterFragment">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/register_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/register_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_login_username"
                    android:inputType="text"
                    android:drawableStart="@drawable/ic_person_outline_black_24dp"
                    android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_login_email"
                    android:drawableStart="@drawable/ic_mail_outline_black_24dp"
                    android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/register_pass_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_login_pass"
                    android:imeActionLabel="@string/action_update"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                    android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/register_pass_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_login_pass_bis"
                    android:imeActionLabel="@string/action_update"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                    android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:background="@drawable/rd_button"
                style="?android:textAppearanceSmall"
                android:text="회원가입"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:id="@+id/register_btn"/>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
